Added Email feature for registration confirmation and order confirmation

--- a/delivery_boy/templates/delivery_boy/base.html
+++ b/delivery_boy/templates/delivery_boy/base.html
@@ -40,6 +40,10 @@
             font-family: 'Great Vibes', cursive;
         }
 
+        header a{
+            text-decoration-line: none;
+        }
+
         nav a {
             margin-left: 1.2rem;
             text-decoration: none;
@@ -180,7 +184,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h2>Designer’s Adda</h2>
+        <h2><a href="/delivery_boy/home/">Designer’s Adda</a></h2>
         <nav>
             <a href="/delivery_boy/home/">Home</a>
             <a href="/delivery_boy/deliveries/">Deliveries</a>
