--- a/Home/templates/home/base.html
+++ b/Home/templates/home/base.html
@@ -40,6 +40,10 @@
             font-family: 'Great Vibes', cursive;
         }
 
+        header a {
+            text-decoration: none;
+        }
+
         nav a {
             margin-left: 1.2rem;
             text-decoration: none;
@@ -180,7 +184,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h2>Designer’s Adda</h2>
+        <h2><a href="/">Designer’s Adda</a></h2>
         <nav>
             <a href="/">Home</a>
             <a href="#designers">Designers</a>
