--- a/user/templates/user/base.html
+++ b/user/templates/user/base.html
@@ -40,6 +40,10 @@
             font-family: 'Great Vibes', cursive;
         }
 
+        header a {
+            text-decoration: none;
+        }
+
         nav a {
             margin-left: 1.2rem;
             text-decoration: none;
@@ -180,7 +184,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h2>Designer’s Adda</h2>
+        <h2><a href="/user/home/">Designer’s Adda</a></h2>
         <nav>
             <a href="/user/home/">Home</a>
             <a href="/designer/all_designers/">Designers</a>
