--- a/delivery_boy/templates/delivery_boy/base.html
+++ b/delivery_boy/templates/delivery_boy/base.html
@@ -187,10 +187,9 @@
         <h2><a href="/delivery_boy/home/">Designer’s Adda</a></h2>
         <nav>
             <a href="/delivery_boy/home/">Home</a>
-            <a href="/delivery_boy/deliveries/">Deliveries</a>
             <a href="/delivery_boy/about/">About Us</a>
             <a href="/logout_confirm/">Log-out</a>
-            <a href="/delivery_boy/profile/{{ user.id }}/">Profile</a>
+            <a href="/delivery_boy/profile/{{ user.delivery_boy.id }}/">Profile</a>
         </nav>
     </header>
 
