--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -78,6 +78,7 @@
                 <th>Image</th>
                 <th>Product</th>
                 <th>Price (₹)</th>
+                <th>Delivery charge</th>
                 <th>Description</th>
                 <th>Order</th>
             </tr>
@@ -94,6 +95,7 @@
                 </td>
                 <td><a href="/products/cart_product/{{ item.product.id }}/">{{ item.product.product_name }}</a></td>
                 <td>{{ item.product.product_price }}</td>
+                <td> ₹ 50.00 </td>
                 <td>{{ item.product.product_description }}</td>
                 <td>
                     <a href="/orders/place_order/{{ item.id }}/" class="checkout-btn">Order</a>
