--- a/orders/templates/orders/orders.html
+++ b/orders/templates/orders/orders.html
@@ -93,7 +93,7 @@
                     {% endwith %}
                 </td>
                 <td><a href="/orders/order_product_info/{{item.id}}/">{{ item.cart_product.product.product_name }}</a></td>
-                <td>{{ item.total_price }}</td>
+                <td> ₹ {{ item.total_price }}</td>
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.order_status }}</td>
             </tr>
