--- a/orders/templates/orders/place_order.html
+++ b/orders/templates/orders/place_order.html
@@ -119,6 +119,11 @@
                 <input type="text" value="₹ {{ cart_item.product.product_price }}" readonly>
             </div>
 
+            <div class="form-group">
+                <label><strong>Delivery Charge</strong></label>
+                <input type="text" value="₹ 50.00" readonly>
+            </div>
+
             <form method="POST">
                 {% csrf_token %}
                 
