--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -64,6 +64,17 @@
             text-decoration: none;
         }
 
+        .product-link {
+            color: #333;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .product-link:hover {
+            color: #00796b;
+            text-decoration: underline;
+        }
+
         .checkout-btn:hover {
             background-color: #e73572;
         }
@@ -93,7 +104,7 @@
                         {% endif %}
                     {% endwith %}
                 </td>
-                <td><a href="/products/cart_product/{{ item.product.id }}/">{{ item.product.product_name }}</a></td>
+                <td><a class="product-link" href="/products/cart_product/{{ item.product.id }}/">{{ item.product.product_name }}</a></td>
                 <td>{{ item.product.product_price }}</td>
                 <td> ₹ 50.00 </td>
                 <td>{{ item.product.product_description }}</td>
